--- a/index.html
+++ b/index.html
@@ -11,66 +11,11 @@
 <body>
   <div class="container">
     <canvas id="myChart"></canvas>
+    <canvas id="stockChart"></canvas>
+    <canvas id="rInChart"></canvas>
   </div>
 
-  <script>
-    let myChart = document.getElementById('myChart').getContext('2d');
-
-    //Global options
-    Chart.defaults.global.defaultFontSize = 15;
-
-    let caPopChart = new Chart(myChart, {
-      type:'bar', //bar, horizontalBar, pie, line, doughnut, radar, polarArea
-      data:{
-        labels:['Los Angeles', 'San Diego', 'San Jose', 'San Francisco', 'Fresno', 'Sacramento'],
-        datasets:[{
-          label:'Population',
-          data:[
-          3792621,
-          1307402,
-          945942,
-          805235,
-          494665,
-          466488
-        ],
-        backgroundColor:[
-        'red',
-        'green',
-        'yellow',
-        'blue',
-        'orange',
-        'purple'
-      ],
-      borderWidth:2,
-      borderColor: 'gray',
-      hoverBorderWidth: 3,
-      hoverBorderColor: 'black'
-        }]
-      },
-      options:{
-        title:{
-          display:true,
-          text:'Largest Cities In California',
-          fontSize:25
-        },
-        legend:{
-          display:true,
-          position:'right',
-          labels: {
-            fontColor:'black'
-          }
-        },
-        layout:{
-          padding:{
-            left:50,
-            right:0,
-            bottom: 0,
-            top:0
-          }
-        }
-      }
-      });
-  </script>
+  <script src="scripts.js"> </script>
 
 
 </body>
