--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <canvas id="myChart"></canvas>
     <canvas id="stockChart"></canvas>
     <canvas id="rInChart"></canvas>
+    <canvas id="newChart"></canvas>
   </div>
 
   <script src="scripts.js"> </script>
